--- a/web/web/templates/web/index.html
+++ b/web/web/templates/web/index.html
@@ -35,7 +35,7 @@
             <a class="nav-link js-scroll-trigger" href="#services">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="/admin">Admin</a>
           </li>
         </ul>
       </div>
@@ -44,7 +44,7 @@
 
   <header class="bg-primary text-white">
     <div class="container text-center">
-      <h1>Welcome to Scrolling Nav</h1>
+      <h1>Esta pagina administra cosas</h1>
       <p class="lead">A landing page template freshly redesigned for Bootstrap 4</p>
     </div>
   </header>
